http_workload_blue_green_demo/yaml/hello1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hello-grouping
  name: hello1-deploy
  labels:
    app: hello1-deploy
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello1-deploy
      version: v1
  template:
    metadata:
      labels:
        app: hello1-deploy
        version: v1
    spec:
      containers:
        - name: hello-v1-deploy
          image: registry.cn-beijing.aliyuncs.com/asm_repo/http_springboot_v1:1.0.0
          ports:
            - containerPort: 8001
