http_workload_blue_green_demo/yaml/hello2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: vm-blue-green
  name: hello2-svc
  labels:
    app: hello2-svc
spec:
  ports:
    - port: 8001
      name: http
  selector:
    app: hello2-deploy
