http_workload_blue_green_demo/yaml/hello2-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: hello-grouping
  name: hello2-vs
spec:
  hosts:
    - hello2-svc
  http:
    - name: http-route
      match:
        - uri:
            prefix: /hello
      route:
        - destination:
            host: hello2-svc
            subset: v1
          weight: 50
        - destination:
            host: hello2-svc
            subset: v2
          weight: 50
